[tool.poetry]
name = "yubarta"
version = "0.1.0"
description = "An application for deploying eBPF programs to remote machines"
authors = ["Your Name <you@example.com>"]

[tool.poetry.scripts]
yubarta-api = "yubarta.src.entrypoints.api.api_launcher:start_api"
yubarta-cli = "yubarta.src.entrypoints.cli.cli_launcher:app"

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.9.0"
pyyaml = "^6.0.1"
requests = "^2.31.0"
fastapi = "^0.100.0"
uvicorn = "^0.23.1"
sqlalchemy = "^2.0.19"
paramiko = "^3.2.0"
pydantic = "^2.0.2"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
